2019-09-13  Wilco Dijkstra  <wdijkstr@arm.com>

	[BZ #23637]
	* string/test-strstr.c (pr23637): New function.
	(test_main): Add tests with longer needles.
	* string/strcasestr.c (AVAILABLE): Fix readahead distance.
	* string/strstr.c (AVAILABLE): Likewise.

2019-09-13  Rajalakshmi Srinivasaraghavan  <raji@linux.vnet.ibm.com>

	* string/memmem.c: Use memcmp for first match.

2019-09-13  Wilco Dijkstra  <wdijkstr@arm.com>

	* string/strcasestr.c (STRCASESTR): Simplify and speedup first match.
	* string/strstr.c (AVAILABLE): Likewise.

2019-09-13  Wilco Dijkstra  <wdijkstr@arm.com>

	* benchtests/bench-strcasestr.c: Rename __strnlen to strnlen.
	* benchtests/bench-strstr.c: Likewise.
	* string/memmem.c (FASTSEARCH): Define.
	* string/str-two-way.h (two_way_short_needle): Minor cleanups.
	Add support for FASTSEARCH.
	* string/strcasestr.c (AVAILABLE): Use read-ahead __strnlen.
	* string/strstr.c (AVAILABLE): Use read-ahead __strnlen.
	(FASTSEARCH): Define.
	* string/test-strcasestr.c: Rename __strnlen to strnlen.
	* string/test-strstr.c: Likewise.

2019-09-06  Wilco Dijkstra  <wdijkstr@arm.com>

	* manual/tunables.texi (glibc.cpu.name): Add ares tunable.
	* sysdeps/aarch64/multiarch/memcpy.c (__libc_memcpy): Use
	__memcpy_falkor for ares.
	* sysdeps/unix/sysv/linux/aarch64/cpu-features.h (IS_ARES):
	Add new define.
	* sysdeps/unix/sysv/linux/aarch64/cpu-features.c (cpu_list):
	Add ares cpu.

2019-09-06  Siddhesh Poyarekar  <siddhesh@sourceware.org>

	* sysdeps/aarch64/multiarch/memcpy_falkor.S (__memcpy_falkor):
	Use vector registers.

2019-09-06  Siddhesh Poyarekar  <siddhesh@sourceware.org>

	* sysdeps/aarch64/multiarch/memcpy_falkor.S (__memcpy_falkor):
	Use multiple registers to copy data in loop tail.

2019-09-06  Siddhesh Poyarekar  <siddhesh@sourceware.org>

	* sysdeps/aarch64/strncmp.S (strncmp): Use lsr instead of
	mov + lsr.

2019-09-06  Siddhesh Poyarekar  <siddhesh@sourceware.org>

	* sysdeps/aarch64/strncmp.S (strncmp): Use a separate shift